--- a/src/style.css
+++ b/src/style.css
@@ -16,10 +16,13 @@ a {
 }
 
 /*搜索栏样式*/
-body {
-
-    background: #eee;
-}
+html {
+    background: url(https://hddesktopwallpapers.in/wp-content/uploads/2015/07/winter-nature-wallpaper.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 
 .searchTab {
     margin-top: 40px;
@@ -57,9 +60,12 @@ body {
     border: none;
     border-radius: 5px;
     color: rgba(255, 255, 255, 0.925);
-    background-color: rgb(96, 151, 223);
+    background-color: rgba(0, 92, 212, 0.815);
 }
-
+.searchForm>button:hover{
+    background: rgba(0, 92, 212, 1);
+    cursor: pointer;
+}
 /*导航栏样式*/
 .cardTable {
     max-width: 800px;
@@ -89,14 +95,15 @@ body {
 }
 
 .cards .siteCard {
-    border: 1px solid #ddd;
+    border: 1px solid rgba(0, 162, 255, 0.815);
+    color: #ddd;
     width: 80px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: rgba(34, 150, 196, 0.3);
     margin-bottom: 4px;
     padding: 5px;
     margin-right: 5px;
@@ -106,7 +113,8 @@ body {
 
 @media(min-width:500px) {
     .cards .siteCard:hover {
-        background-color: #ddd;
+        background-color: rgba(34, 150, 196, 0.5);
+        cursor: pointer;
     }
 }
 
@@ -152,14 +160,15 @@ body {
 }
 
 .cards .siteAdd {
-    border: 1px solid #ddd;
+    border: 1px solid rgba(0, 162, 255, 0.815);
+    color: #ddd;
     width: 80px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: rgba(34, 150, 196, 0.3);
     margin-bottom: 4px;
     padding: 5px;
     margin-right: 5px;
@@ -167,7 +176,7 @@ body {
 }
 
 .cards .siteAdd:hover {
-    background-color: #ddd;
+    background-color: rgba(34, 150, 196, 0.5);
 }
 
 @media(min-width:500px) {
